--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
-    "pixi.js": "^6.3.0",
     "sass": "^1.50.0",
     "typescript": "~4.6.3",
     "vite": "^2.9.1",
