--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,6 @@
 {
   "extends": ["next/core-web-vitals", "prettier"],
-  "rules": {}
+  "rules": {
+    "react/no-unescaped-entities": "off"
+  }
 }
