--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
   "css.validate": false,
-  "scss.lint.unknownAtRules": "ignore",
-  "editor.formatOnSave": true
+  "scss.lint.unknownAtRules": "ignore"
 }
